# sksys

./: .editorconfig  .gitignore  .gitlab-ci.yml  .prettierignore  Cargo.toml  README.md  package.json
.husky/: pre-commit
Prototyp/: Prototyp.html  Prototyp2.html  Prototyp3.html  script.js
backend/aggregator/: Cargo.toml  Dockerfile  README.md
backend/aggregator/src/: carbon.rs  main.rs  prometheus.rs
backend/ingester/: Cargo.toml  Dockerfile  sqlx-data.json  swagger.json  swagger.v1.json
backend/ingester/migrations/: 1_create_devices.up.sql
backend/ingester/src/: main.rs
docs/design/: overview.drawio
frontend/Dashboard/: Dashboards.json
frontend/Datasource/: datasource.yaml
frontend/admin/: README.md  index.html  package-lock.json  package.json
frontend/admin/src/: App.vue  main.js  style.css
frontend/admin/src/components/: ClientList.vue  HelloWorld.vue  NavBar.vue
frontend/admin/src/services/: ClientService.js
frontend/client/: index.html  package-lock.json  package.json  vite.config.js
frontend/client/public/: index.html
frontend/client/src/: App.vue  main.js
infra/: README.md
infra/dev/: main.tf  modules.tf  outputs.tf  service.tf  variables.tf
infra/gce-compute/: main.tf
infra/gitlab-runner/: README.md  config.toml  main.tf  runner.tf
infra/modules/docker-aggregator/: module.tf  variables.tf
infra/modules/docker-grafana/: module.tf  variables.tf
infra/modules/docker-influxdb/: module.tf  output.tf  variables.tf
infra/modules/docker-ingester/: module.tf  output.tf  variables.tf
infra/modules/docker-postgres/: module.tf  outputs.tf  variables.tf
infra/modules/gc-docker-instance/: module.tf  output.tf  variables.tf
infra/modules/grafana/: module.tf
infra/modules/grafana-config/: main.tf  module.tf  output.tf  variables.tf
infra/modules/influxdb/: module.tf
infra/modules/postgres/: module.tf
infra/modules/prometheus/: module.tf  prometheus.yaml
infra/prod/: modules.tf  outputs.tf  run.sh  variables.tf
infra/prod/docker/: main.tf  modules.tf  outputs.tf  variables.tf
infra/prod/gce/: main.tf  modules.tf  outputs.tf  variables.tf
prototyp2/: README.md  package-lock.json  package.json
prototyp2/src/: App.vue  main.js
scripts/: build-frontend.sh  fake-client.sh  fake-client2.sh  gce-gitlab-runner.sh
