[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
envy = "0.4.2"
prometheus-client = "0.21.1"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
