[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.26"
envy = "0.4.2"
influxdb = { version = "0.6.0", features = ["derive"] }
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.163", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
